@@ -17,7 +17,6 @@ import org.elasticsearch.script.Metadata;
 import org.elasticsearch.test.ESTestCase;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -50,8 +49,8 @@ public class RenameProcessorTests extends ESTestCase {
         list.add("item3");
         document.put("list", list);
         List<Map<String, String>> one = new ArrayList<>();
-        one.add(Collections.singletonMap("one", "one"));
-        one.add(Collections.singletonMap("two", "two"));
+        one.add(Map.of("one", "one"));
+        one.add(Map.of("two", "two"));
         document.put("one", one);
         IngestDocument ingestDocument = RandomDocumentPicks.randomIngestDocument(random(), document);
 
@@ -139,7 +138,7 @@ public class RenameProcessorTests extends ESTestCase {
 
     public void testRenameAtomicOperationSetFails() throws Exception {
         Map<String, Object> metadata = new HashMap<>();
-        metadata.put("list", Collections.singletonList("item"));
+        metadata.put("list", List.of("item"));
 
         IngestDocument ingestDocument = TestIngestDocument.ofMetadataWithValidator(
             metadata,
@@ -162,7 +161,7 @@ public class RenameProcessorTests extends ESTestCase {
 
     public void testRenameAtomicOperationRemoveFails() throws Exception {
         Map<String, Object> metadata = new HashMap<>();
-        metadata.put("list", Collections.singletonList("item"));
+        metadata.put("list", List.of("item"));
 
         IngestDocument ingestDocument = TestIngestDocument.ofMetadataWithValidator(
             metadata,
@@ -185,16 +184,13 @@ public class RenameProcessorTests extends ESTestCase {
         IngestDocument ingestDocument = TestIngestDocument.withDefaultVersion(source);
         Processor processor1 = createRenameProcessor("foo", "foo.bar", false);
         processor1.execute(ingestDocument);
-        assertThat(ingestDocument.getFieldValue("foo", Map.class), equalTo(Collections.singletonMap("bar", "bar")));
+        assertThat(ingestDocument.getFieldValue("foo", Map.class), equalTo(Map.of("bar", "bar")));
         assertThat(ingestDocument.getFieldValue("foo.bar", String.class), equalTo("bar"));
 
         Processor processor2 = createRenameProcessor("foo.bar", "foo.bar.baz", false);
         processor2.execute(ingestDocument);
-        assertThat(
-            ingestDocument.getFieldValue("foo", Map.class),
-            equalTo(Collections.singletonMap("bar", Collections.singletonMap("baz", "bar")))
-        );
-        assertThat(ingestDocument.getFieldValue("foo.bar", Map.class), equalTo(Collections.singletonMap("baz", "bar")));
+        assertThat(ingestDocument.getFieldValue("foo", Map.class), equalTo(Map.of("bar", Map.of("baz", "bar"))));
+        assertThat(ingestDocument.getFieldValue("foo.bar", Map.class), equalTo(Map.of("baz", "bar")));
         assertThat(ingestDocument.getFieldValue("foo.bar.baz", String.class), equalTo("bar"));
 
         // for fun lets try to restore it (which don't allow today)
